[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Instruction.gd" type="Script" id=1]
[ext_resource path="res://Images/black.png" type="Texture" id=2]
[ext_resource path="res://Images/instructions.png" type="Texture" id=3]
[ext_resource path="res://Images/key.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Title.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sounds/ding.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]

resource_name = "Fade"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Instruction" type="Node2D" index="0"]

modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Background" type="Sprite" parent="." index="0"]

modulate = Color( 1, 1, 1, 0.33702 )
position = Vector2( 511.994, 300 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 531.869, 308.292 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="ReadyA" type="Sprite" parent="." index="2"]

position = Vector2( 103, 352 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="LabelA" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 81.0
margin_top = 310.0
margin_right = 121.0
margin_bottom = 359.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "Q"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ReadyB" type="Sprite" parent="." index="4"]

position = Vector2( 917, 352 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="LabelB" type="Label" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 898.0
margin_top = 314.0
margin_right = 938.0
margin_bottom = 363.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "P"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ReadyC" type="Sprite" parent="." index="6"]

position = Vector2( 140, 508 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="LabelC" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 117.0
margin_top = 468.0
margin_right = 157.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "A"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="ReadyD" type="Sprite" parent="." index="8"]

position = Vector2( 880, 508 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="LabelD" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 860.0
margin_top = 471.0
margin_right = 900.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 5 )
text = "L"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="10"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Fade = SubResource( 1 )
blend_times = [  ]

[node name="Ding" type="AudioStreamPlayer" parent="." index="11"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


